fix navbar out of screen mobile

--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -35,6 +35,7 @@
   cursor: pointer;
   font-weight: 600;
   transition: background-color 0.3s, color 0.3s;
+  line-height: 0;
 }
 
 .nav-btn:hover {
@@ -49,7 +50,7 @@
 
 @media (max-width: 600px) {
   .nav-btn {
-    padding: 0.3rem 0.8rem;
+    padding: 0.2rem;
     font-size: 0.85rem;
   }
 }
